# ai-harmonization

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ai_harmonization/: cde.py  harmonization_benchmark.py  jsonl.py  main.py  simple_data_model.py
ai_harmonization/harmonization_approaches/: base.py  embeddings.py  rag.py  similarity_inmem.py
harmonization/: cde.py  harmonization_benchmark.py  interactive.py  jsonl.py  main.py  simple_data_model.py  utils.py
harmonization/harmonization_approaches/: base.py  create_inference_prompts.py  embeddings.py  harmonization.py  inference.py  llm.py  rag.py  similarity_inmem.py  similarity_medgemma.py  zeroshot_llm.py
jupyter/: ai_assisted_data_curation.ipynb  ai_assisted_data_curation_bdc.html  ai_assisted_data_curation_bdc.ipynb  ai_assisted_data_curation_rag.ipynb  embedding_model_training.ipynb  embedding_model_training_data.ipynb  harmonization_approach.ipynb  harmonization_approach_evaluation.ipynb  harmonization_benchmark_creation.ipynb  harmonization_real_benchmark_creation.ipynb  harmonization_real_benchmark_creation_gdc.ipynb  harmonization_synth_benchmark_creation.ipynb  harmonization_test_data.ipynb  harmonization_training_data.ipynb
jupyter/examples/: example_real_source_model.json  example_synthetic_source_model.json  example_target_model_BDC.json  harmonization_prompt_1.txt
tests/: test_harmonization.py  test_sssom.py
