[project]
name = "ai_harmonization"
version = "0.3.0"
description = "AI-backed harmonization framework"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "chromadb>=1.0.15",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-huggingface>=0.3.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sssom>=0.4.16",
    "sssom-schema>=1.0.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "itables>=2.4.4",
    "ipython>=9.4.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests",
]

[tool.setuptools]
packages = ["ai_harmonization", "ai_harmonization.harmonization_approaches"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "anywidget>=0.9.18",
    "nbconvert>=7.16.6,<8.0.0",
    "ipykernel>=6.30.0",
]
