[project]
name = "ai_harmonization"
version = "0.3.2"
description = "AI-backed harmonization framework"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-huggingface>=0.3.1",
    "pydantic>=2.11.7",
    "sssom>=0.4.16",
    "sssom-schema>=1.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "itables>=2.4.4",
    # We want this to work in a Google Colab environment.
    # In such environments, Google's pre-installs a ton of Google
    # Python SDKs which don't always work with the latest version
    # of popular packages. As such, we have to be more lenient and
    # allow older versions of specific packages so the dep resolution
    # is successful when this is pip installed in Google Colab.
    #
    # The packages after this comment are the latest versions
    # supported in Google Colab as of 11 NOV 2025. Leaving >=
    # so that they can be updated to later version as Colab supports
    # newer versions (and so non-Colab environments get the latest)
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "requests>=2.32.4",
    "ipython>=7.34.0",
    "torch>=2.8.0",
    "matplotlib>=3.10.0",
    # The following have sub-deps that have restrictions in other Google Colab deps
    # Similar to the above, leaving >= on an older version to
    # automatically get the latest version possible during dep resolution
    "chromadb>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests",
]

[tool.setuptools]
packages = ["ai_harmonization", "ai_harmonization.harmonization_approaches"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "anywidget>=0.9.18",
    "nbconvert>=7.16.6,<8.0.0",
    "ipykernel>=6.30.0",
]
